--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            transition: 0.4s;
         }
 
         .box{
